# spec-kit-ai-sdd

./: .editorconfig  .gitattributes  .markdownlint.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  WARP.md  pyproject.toml
.claude/: settings.local.json
.github/pull_request_template/: sync.md
.github/workflows/: ai-review.yml  claude-code-review.yml  claude.yml  manual-release.yml  release.yml  sdd-ci.yml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
dev-docs/agents/: mcp.md
dev-docs/cli/: AGENTS.md  CLAUDE.md
dev-docs/git/: worktrees.md
dev-docs/sdd/: AGENTS.md  CLAUDE.md  constitution.md  constitution_update_checklist.md  lifecycle.md
docs/: conflict-resolution-playbook.md  upstream-sync-workflow.md
memory/: constitution.md
reports/: .gitignore
scripts/: common.sh
scripts/ci/: check-language-policy.sh  check-templates-drift.sh  run-local-ci.sh  run-sdd-structure-lint.sh
scripts/sdd/: check_language.sh  lint_docs.sh  run_semantic_checks.sh  validate_structure.py
scripts/upstream/: compat-analyze.sh  diff-report.sh  fetch.sh  merge.sh  sync-dry-run.sh  sync.sh
specs/000-example/: ISSUE.md  TASK-PLAN.md  spec.md
specs/002-language-policy/: IMPLEMENTATION.md
specs/003-upstream-sync-sdd/: AGENTS.md  CLAUDE.md  plan.md  spec.md  tasks.md
specs/004-local-ci-checks/: AGENTS.md  CLAUDE.md  plan.md  spec.md  tasks.md
templates/: agent-file-template.md  plan-template.md
tests/: test_sdd_validation.py  test_specify_cli.py
(+21 files in other folders)
